# vimib

./: Cargo.toml  LICENCE  README.md  example.vimib
.github/workflows/: rust.yml
src/: main.rs
src/libcodegen/: Cargo.toml
src/libcodegen/src/: lib.rs  opcode.rs  serialize.rs
src/libparser/: Cargo.toml
src/libparser/src/: ast.rs  lexer.rs  lib.rs  parse_context.rs  span.rs
src/libparser/src/parser/: expression.rs  mod.rs  statement.rs
src/libvm/: Cargo.toml
src/libvm/src/: consts.rs  function.rs  lib.rs  module.rs  vm.rs  vm_type.rs
